<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="92dp"
        android:layout_height="115dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="107dp"
        android:contentDescription="@string/content_description_logo"
        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cucei_datahub_full" />

    <TextView
        android:id="@+id/datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="151dp"
        android:text="@string/text_view_datos"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="161dp"
        android:backgroundTint="@color/black"
        android:ems="19"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/button_registrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="161dp"
        android:backgroundTint="@color/gray"
        android:ems="19"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/button_regresar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:ems="20"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="97dp"
        android:layout_height="109dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="113dp"
        android:contentDescription="@string/content_description_logo_udg"
        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/escudoudg" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="101dp"
        android:ems="20"
        android:hint="@string/textarea_apellidom"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="@string/textarea_matricula"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="@string/textarea_apellidop"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:ems="20"
        android:hint="@string/textarea_nombre"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datos"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>