<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="134dp"
                android:layout_height="144dp"
                android:layout_marginTop="156dp"
                android:contentDescription="@string/title5"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/mostrar_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textarea_nombre"
                app:layout_constraintEnd_toEndOf="@id/imageView3"
                app:layout_constraintStart_toStartOf="@id/imageView3"
                app:layout_constraintTop_toBottomOf="@id/imageView3"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/matricula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textarea_matricula"
                app:layout_constraintEnd_toEndOf="@id/imageView3"
                app:layout_constraintStart_toStartOf="@id/imageView3"
                app:layout_constraintTop_toBottomOf="@id/mostrar_nombre"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_hint"
                app:layout_constraintEnd_toEndOf="@id/imageView3"
                app:layout_constraintStart_toStartOf="@id/imageView3"
                app:layout_constraintTop_toBottomOf="@id/matricula"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="197dp"
                android:text="@string/close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/imageView3"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                tools:ignore="ButtonStyle"
                app:layout_constraintStart_toStartOf="@id/imageView3"
                app:layout_constraintTop_toBottomOf="@id/correo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/gray"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="32dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>